07-03-2008	Dmitry Dulepov	<dmitry@typo3.org>

	* Removed one of two TS templates and merged its code into remaining

26-12-2007	Dmitry Dulepov	<dmitry@typo3.org>

	* New implementation to obtain URL from FE
	* Fix for plugin info in Page module

26-12-2007	Dmitry Dulepov	<dmitry@typo3.org>

	* Updated documentation: fixed small error in the description of build procedure

08-09-2007	Dmitry Dulepov	<dmitry@typo3.org>

	* Updated documentation: added section about TypoScript templates
	* Added renderer for CMS layout (4.2 feature)

24-08-2007	Dmitry Dulepov	<dmitry@typo3.org>

	* Reindex also pages that have "clearCache" TSConfig option set
	* Added automatic table creation before reindexing
	* Updated manual: added section about creating mnogosearch database

22-08-2007	Dmitry Dulepov	<dmitry@typo3.org>

	* Completed implementation of MTB renderer
	* Updated manual

21-08-2007	Dmitry Dulepov	<dmitry@typo3.org>

	* Added template test mode in flexform configuration for pi1
	* Added exported mapped templavoila templates

19-08-2007	Dmitry Dulepov	<dmitry@typo3.org>

	* Perform post processing only for typeNum=0
	* Removed extra quotes in template files
	* Started MTB implementation: added markers to template

14-07-2007	Dmitry Dulepov	<dmitry@typo3.org>

	* Small fix in the manual about compiling PHP extension. Thanks to Wolfgang Klinger

11-07-2007	Dmitry Dulepov	<dmitry@typo3.org>

	* Fix: same link is displayed below excerpt for all results
	* manual.sxw updates

02-07-2007	Dmitry Dulepov	<dmitry@typo3.org>

	* Fix: CLI script did not postprocess blob fields
	* Added verbose option (-v) to CLI script
	* Changed pi1/class.tx_mnogosearch_pi1.php to use 'q' instead of 'submit' to check if search results should be displayed

31-05-2007	Dmitry Dulepov	<dmitry@typo3.org>

	* Initial release